home-k8s/apps/adguard/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: adguard
  replicas: 0
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adguard
    spec:
      automountServiceAccountToken: false
      hostUsers: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      containers:
        - name: adguard
          image: KUSTOMIZE_PATCH
          securityContext:
            # We are using UserNamespaces to mitigate security issues.
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
              add:
                # The main executable has this set.
                # We could roll our own image, but that's too much work.
                - NET_BIND_SERVICE
          ports:
            - containerPort: 8053
              name: dns-udp
              protocol: UDP
            - containerPort: 8053
              name: dns-tcp
              protocol: TCP
            - containerPort: 3000
              name: http-webui
          volumeMounts:
            - name: adguard
              mountPath: /opt/adguardhome/work
              subPath: opt/adguardhome/work
            - name: adguard
              mountPath: /opt/adguardhome/conf
              subPath: opt/adguardhome/conf
      volumes:
        - name: adguard
          persistentVolumeClaim:
            claimName: adguard
